--- a/recruiter-server/public/css/style.css
+++ b/recruiter-server/public/css/style.css
@@ -4,11 +4,11 @@ body {
     padding: 0;
     line-height: 1.6;
     background: #f4f4f4;
-    color: #333;
+    color: #000000;
   }
   
   header {
-    background: #333;
+    background: #021ce3;
     color: #fff;
     padding: 10px 0;
     text-align: center;
@@ -55,7 +55,7 @@ body {
     display: block;
     width: 100%;
     padding: 10px;
-    background: #333;
+    background: #021ce3;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -63,6 +63,6 @@ body {
   }
   
   form button:hover {
-    background: #555;
+    background: #021ce3;
   }
   
