a bit logic change in pages

--- a/recruiter-server/views/add-company.ejs
+++ b/recruiter-server/views/add-company.ejs
@@ -1,4 +1,12 @@
 <%- include('layout/header') %>
+<header>
+  <nav>
+    <ul>
+      <li><a href="/recruiter/home">Home</a></li>
+      <li><a href="/recruiter/add-job">Add Job</a></li>
+    </ul>
+  </nav>
+</header>
 <h2>Add a New Company</h2>
 <form action="/recruiter/add-company" method="POST">
   <label for="companyName">Company Name:</label>
