--- a/recruiter-server/views/add-job.ejs
+++ b/recruiter-server/views/add-job.ejs
@@ -1,4 +1,12 @@
 <%- include('layout/header') %>
+<header>
+  <nav>
+    <ul>
+      <li><a href="/recruiter/home">Home</a></li>
+      <li><a href="/recruiter/add-company">Add Company</a></li>
+    </ul>
+  </nav>
+</header>
 <h2>Add a Job</h2>
 <form action="/recruiter/add-job" method="POST">
   <label for="title">Job Title:</label>
