--- a/recruiter-server/views/home.ejs
+++ b/recruiter-server/views/home.ejs
@@ -1,4 +1,13 @@
 <%- include('layout/header') %>
+<header>
+  <nav>
+    <ul>
+      <li><a href="/recruiter/home">Home</a></li>
+      <li><a href="/recruiter/add-company">Add Company</a></li>
+      <li><a href="/recruiter/add-job">Add Job</a></li>
+    </ul>
+  </nav>
+</header>
 <h1>Welcome to the Recruiter Dashboard</h1>
 <p>Manage your job postings and companies easily.</p>
 
