--- a/recruiter-server/views/add-company.ejs
+++ b/recruiter-server/views/add-company.ejs
@@ -1,9 +1,9 @@
 <%- include('layout/header') %>
 <header>
-  <nav>
-    <ul>
-      <li><a href="/recruiter/home">Home</a></li>
-      <li><a href="/recruiter/add-job">Add Job</a></li>
+  <nav class="companynav">
+    <ul class="topnavright">
+      <li><a class="navtext" href="/recruiter/home">Home</a></li>
+      <li><a class="navtext" href="/recruiter/add-job">Add Job</a></li>
     </ul>
   </nav>
 </header>
