--- a/recruiter-server/views/login.ejs
+++ b/recruiter-server/views/login.ejs
@@ -2,6 +2,10 @@
 <div class="bodywala">
     <div class="login-container">
         <div class="login-left">
+            <div class="login-heading">
+                <h1 class="main-heading">Go<span style="color:#FFD700">Hire</span></h1>
+                <p class="sub-heading" style="color:black;">Get Yourself Hired</p>
+            </div>
         </div>
         <div class="login-right">
             <h2 class="login-title">Log in</h2>
@@ -22,5 +26,4 @@
             <p class="signup-text">Don't have an account? <a href="#">Sign up</a></p>
         </div>
     </div>
-  </div>
-
+</div>
