--- a/applicant-server/views/home.ejs
+++ b/applicant-server/views/home.ejs
@@ -13,6 +13,7 @@
                 <li><a href="/jobs" class="hover:text-blue-200">Jobs</a></li>
                 <li><a href="/internships" class="hover:text-blue-200">Internship</a></li>
                 <li><a href="/contact" class="hover:text-blue-200">Contact Us</a></li>
+                <li><a href="/login" class="hover:text-blue-200">Login</a></li>
             </ul>
             
             <div class="md:hidden flex flex-col space-y-1 cursor-pointer" id="mobile-menu">
