--- a/applicant-server/views/layout/footer.ejs
+++ b/applicant-server/views/layout/footer.ejs
@@ -1,7 +1,9 @@
-<footer class="bg-gray-900 text-white text-center p-6 mt-8">
-  <p>&copy; 2025 Go Hire. All rights reserved.</p>
-  <p><a href="/privacy" class="hover:text-gray-400">Privacy Policy</a> | <a href="/terms" class="hover:text-gray-400">Terms of Service</a></p>
+<footer>
+  <div class="footerbox">
+    <p>&copy; 2025 Go Hire. All rights reserved.</p>
+  </div>
 </footer>
+
 </body>
 <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 </html>
