--- a/applicant-server/views/home.ejs
+++ b/applicant-server/views/home.ejs
@@ -2,7 +2,7 @@
     
     <nav class="bg-blue-600 p-4 shadow-lg">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-white text-2xl font-bold">Go Hire</a>
+            <a href="#" class="text-white text-3xl font-bold">Go<span class="text-yellow-400">Hire</span></a>
             
             <div class="relative w-1/3">
                 <input type="text" placeholder="Search for Opportunities" class="w-full p-2 rounded-lg border border-blue-300 focus:outline-none focus:ring-2 focus:ring-blue-400">
