--- a/recruiter-server/views/login.ejs
+++ b/recruiter-server/views/login.ejs
@@ -1,4 +1,12 @@
-<%- include('layout/header') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GoHire - Login</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
 <div class="bodywala">
     <div class="login-container">
         <div class="login-left">
